added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
+    <link rel="stylesheet" href="./assets/style.css"> <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="header">
@@ -17,13 +17,19 @@
      <ul>
       <li>The head element contains information about the webpage.</li>
       <li>The body element represents the visible content shown to the user.</li>
+      <li>HTML makes up the framework of a webpage</li>
      </ul>
       </section>
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <ul>
+            <li>A margin indicates how much space we want around the outside of an element.</li>
+            <li>A padding indicates how much space we want around the content inside an element.</li>
+            <li>styles can be attributed to heading text (h1,h2 etc.)</li>
+            <li>CSS make up the stylistic formating of a web page</li>
+          </ul>
         </ul>
       </section>
    
